# bil-ya-da-dus

./: .gitignore  DEPLOY.md  GELISTIRME_PLANI.md  LANSMAN_REHBERI.md  README.md  codemagic.yaml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  run_dev.sh  start.sh  test.db
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/api/: admin_metrics.py  ads.py  auth.py  (+13 more)
backend/monitoring/: prometheus_metrics.py
backend/scripts/: assemble_gorsel_rich.py  e2e_correct_test.py  e2e_game_test.py  e2e_latejoin_test.py  e2e_lifecycle_test.py  insert_gorsel.py  metrics_report.py  questions_generated.json  questions_generated2.json  questions_gorsel_rich.json  questions_hard_tournament.json  questions_tr.json  questions_tr_batch2.json  questions_tr_batch4.json  questions_tr_batch5.json  reseed_gorsel.py  seed_questions.py  send_push_campaign.py  v1_independent_game_test.py  v1_lobby_test.py
backend/tasks/: celery_app.py  daily_tasks.py
backend/tests/: conftest.py  test_admin_metrics.py  test_anti_tilt.py  test_auth.py  test_bot_service.py  test_cap_service.py  test_daily_challenge.py  test_daily_quests.py  test_economy_rebalance.py  test_feedback_fixes.py  test_game_api.py  test_game_engine.py  test_guest_auth.py  test_health.py  test_joker_zor_mod.py  test_leaderboard_projection.py  test_matchmaking.py  test_profanity.py  test_push.py  test_quick_msg.py  test_score_service.py  test_shield_prepare.py  test_tournament_money.py  test_users.py  test_zor_mod_pool.py
(+199 files in other folders)
