[project]
name = "quizroyale-backend"
version = "0.1.0"
description = "QuizRoyale — Mobil Trivia Battle Royale Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Cache
    "redis[hiredis]>=5.2.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Configuration
    "pydantic-settings>=2.6.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # AI
    "anthropic>=0.39.0",
    # HTTP client
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
